add doctor schema

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc",
     "dev": "tsx watch src/server.ts",
     "lint": "eslint ./src/**/*",
-    "migrate": "prisma migrate dev",
-    "generate": "prisma generate",
+    "mig": "prisma migrate dev",
+    "gen": "prisma generate",
     "studio": "prisma studio",
     "push": "prisma db push",
     "pull": "prisma db pull",
