--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "studio": "prisma studio",
     "push": "prisma db push",
     "pull": "prisma db pull",
+    "stripe:webhook": "stripe listen --forward-to localhost:5000/webhook",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,7 +25,7 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "7.4.0",
     "better-auth": "^1.4.18",
-    "cloudinary": "^2.9.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "date-fns": "^4.1.0",
@@ -39,6 +40,7 @@
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "qs": "^6.15.0",
+    "stripe": "^20.3.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
